--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="pageCalc hide"></div>
 
     <div class="tabBar">
-        <a href="./index.html"><button id="listBtn">List</button></a>
-       <a href="./main.html"> <button id="grad" >calc</button></a>
+        <a href="./index.html"><button id="listBtn"><img src="./free-animated-icon-document-6172540.gif" alt="" width="100px"></button></a>
+       <a href="./main.html"> <button id="grad" ><img src="./free-animated-icon-calculator-6454138.gif" alt="" width="100px"></button></a>
     </div>
 
     <script src="./main.js"></script>
